Added copyright message to front page

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 <button id="ResetButton">Reset Table</button>
             </td>
         </tr>
-        </tfoot>
-            <tr>
+        <tr>
                 <td class="number">Group &#x2192;<br>Period &#x2193;</td><!-- Labels -->
                 <td class="number">
                     <button id="g1">1</button>
@@ -103,8 +102,7 @@
                 <td class="number">
                     <button id="g18">18</button>
                 </td><!-- Col 18-->
-            </tr>
-        </thead>
+        </tr>
         <tbody>
             <tr>
                 <td class="number">
@@ -629,7 +627,8 @@
         </tr>
     </table>
     <br>
-    Designed & Coded by William Rahal
+    <br>
+    <p style="font-size: smaller">&copy; William Rahal under the GNU General Public License for free use and distribution</p>
     <script src="index.js"></script>
 </body>
 </html>
